<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/ivDetailBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_back_button"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/ic_round_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPokeNumberDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="#001" />

            <ImageView
                android:id="@+id/ivPokeImageDet"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPokeNumberDet"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvPokeNameDet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPokeImageDet"
                tools:text="Lorem Ipsum" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTypes1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:elevation="4dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:chipCornerRadius="20dp"
                app:chipStrokeWidth="0dp"
                app:layout_constraintEnd_toStartOf="@+id/chipTypes2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPokeNameDet"
                tools:text="LoremIpsum" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTypes2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:elevation="4dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:chipCornerRadius="20dp"
                app:chipStrokeWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/chipTypes1"
                app:layout_constraintTop_toTopOf="@+id/chipTypes1"
                tools:text="LoremIpsum" />

            <TextView
                android:id="@+id/tvPokemonCatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/click_to_catch_pokemon"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipTypes1" />

            <ImageView
                android:id="@+id/ivPokemonCatch"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@null"
                android:src="@drawable/img_open_pokeball"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPokemonCatch" />

            <Button
                android:id="@+id/btnRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_pokemon"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/ivPokemonCatch"
                app:layout_constraintStart_toStartOf="@+id/ivPokemonCatch"
                app:layout_constraintTop_toBottomOf="@+id/ivPokemonCatch" />

            <TextView
                android:id="@+id/pokemonDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/description"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRelease" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardDescPokemonDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemonDesc"
                app:strokeWidth="0dp">

                <TextView
                    android:id="@+id/tvPokemonDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:padding="15dp"
                    android:textSize="18sp"
                    tools:text="Lorem Ipsum" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/pokemonStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/stats"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardDescPokemonDetail" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardStatsPokemonDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="@+id/cardDescPokemonDetail"
                app:layout_constraintStart_toStartOf="@+id/cardDescPokemonDetail"
                app:layout_constraintTop_toBottomOf="@+id/pokemonStats"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/textHpPoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="HP"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvHpPoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="100" />

                    <TextView
                        android:id="@+id/textAttackPoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Attack"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textHpPoke" />

                    <TextView
                        android:id="@+id/tvAttackPoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textAttackPoke"
                        tools:text="100" />

                    <TextView
                        android:id="@+id/textDefensePoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Defense"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textAttackPoke" />

                    <TextView
                        android:id="@+id/tvDefensePoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textDefensePoke"
                        tools:text="100" />

                    <TextView
                        android:id="@+id/textSpecialAttackPoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Special Attack"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textDefensePoke" />

                    <TextView
                        android:id="@+id/tvSpecialAttackPoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textSpecialAttackPoke"
                        tools:text="100" />

                    <TextView
                        android:id="@+id/textSpecialDefensePoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Special Defense"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textSpecialAttackPoke" />

                    <TextView
                        android:id="@+id/tvSpecialDefensePoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textSpecialDefensePoke"
                        tools:text="100" />

                    <TextView
                        android:id="@+id/textSpeedPoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Speed"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textSpecialDefensePoke" />

                    <TextView
                        android:id="@+id/tvSpeedPoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textSpeedPoke"
                        tools:text="100" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/pokemonMoves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/moves"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardStatsPokemonDetail" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardMovesPokemonDetail"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="@+id/cardStatsPokemonDetail"
                app:layout_constraintStart_toStartOf="@+id/cardStatsPokemonDetail"
                app:layout_constraintTop_toBottomOf="@+id/pokemonMoves"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvPokemonMoves"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/item_moves_layout" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>